# ignite25-kor-observe-manage-and-scale-agentic-ai-apps-with-microsoft-foundry

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
labs/0-setup/: 00-validate-setup.ipynb  README.self-guided.md
labs/1-agents/: 11-build-cora-retail-agent.ipynb  12-agent-framework-orchestration.ipynb
labs/2-models/: 21-simulate-dataset.ipynb  21-simulate-datasets.jsonl  22-evaluate-models.ipynb
labs/3-customization/: 31-basic-finetuning.ipynb  32-custom-grader.ipynb  32-distillation_export.json  32-zava-tone-baseline-406985aa.jsonl  33-distill-finetuning.ipynb  zava-tone-posttraining-6a326525.jsonl  zava-tone-training-5d6e4bdf.jsonl  zava-tone-training-6a326525.jsonl  zava-tone-validation-5d6e4bdf.jsonl  zava-tone-validation-6a326525.jsonl
labs/4-evaluation/: 41-first-evaluation-run.ipynb  41-first-evaluation.results.json  42-evaluate-quality.ipynb  42-evaluate-quality.results.json  43-evaluate-safety.ipynb  44-evaluate-agents.ipynb
labs/5-tracing/: 50-collect-span-snapshots.ipynb  50-trace-agent-session.ipynb  51-openai-weekend-planner.ipynb
labs/6-deployment/: 60-deployment.ipynb
